# vulkanR

./: .Rbuildignore  .gitignore  DESCRIPTION  DESIGN.md  LICENSE  NAMESPACE  README.md  check_r.bat  configure  configure.win  error-output.txt  fix.r  output.txt  roadmap.txt  task.xml  test_build.bat  test_patch.R
.github/workflows/: b1-guard.yml  ci.yml
R/: api.R  conditions.R  extendr-wrappers.R  zzz.R
man/: gpu_info.Rd  render_heightmap.Rd  vulkanR-package.Rd
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  vulkanR-win.def
src/rust/: Cargo.toml  rust-toolchain.toml
src/rust/src/: errors.rs  lib.rs  mesh.rs  renderer.rs  shaders.rs
tests/testthat/: helper-images.R  helper-vulkanR.R  test-b1-input-validation.R  test-b1-validation.R  test-render-heightmap.R  test-smoke.R  testthat.R
tools/: config.R
vulkanR/src/rust/: Cargo.toml
vulkanR/src/rust/src/: lib.rs  renderer.rs
