[package]
name = "vulkanr"
version = "0.1.0"
edition = "2021"

[features]
# FFI on by default so R builds still work where R is present.
default = ["ffi"]
ffi = ["extendr-api"]

[dependencies]
extendr-api = { version = "0.6", optional = true }
glam = "0.27"
# Keep PNG only; avoids pulling Rayon (keeps rustc 1.75 OK)
image = { version = "0.24.8", default-features = false, features = ["png"] }
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }

# wgpu 0.19 — disable defaults; enable WGSL + std explicitly
wgpu = { version = "=0.19.4", default-features = false, features = ["wgsl"] }

# ---- Backend selection (critical) ----
# Pin wgpu-core/hal to the same 0.19 patch. Enable only native backends we support.
[target.'cfg(windows)'.dependencies]
wgpu-core = { version = "=0.19.4", default-features = false, features = ["vulkan", "dx12"] }
wgpu-hal  = { version = "=0.19.5", default-features = false, features = ["vulkan", "dx12"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu-core = { version = "=0.19.4", default-features = false, features = ["vulkan"] }
wgpu-hal  = { version = "=0.19.5", default-features = false, features = ["vulkan"] }

# macOS: Metal only (no Vulkan here for our build)
[target.'cfg(target_os = "macos")'.dependencies]
wgpu-core = { version = "=0.19.4", default-features = false, features = ["metal"] }
wgpu-hal  = { version = "=0.19.5", default-features = false, features = ["metal"] }