# src/rust/Cargo.toml
[package]
name = "vulkanr"
version = "0.1.0"
edition = "2021"

[features]
# FFI on by default for R builds
default = ["ffi"]
ffi = ["extendr-api"]

[dependencies]
extendr-api = { version = "0.6", optional = true }
glam        = "0.27"
# Avoid Rayon (keeps rustc 1.75 ok)
image       = { version = "0.24.8", default-features = false, features = ["png"] }
pollster    = "0.3"
bytemuck    = { version = "1", features = ["derive"] }

# Top-level wgpu: lean; shader language only (backends via core/hal below)
wgpu        = { version = "=0.19.4", default-features = false, features = ["wgsl"] }

# ---- Backend selection via core/hal (disable defaults; enable only native backends)

# Windows: Vulkan + D3D12
[target.'cfg(windows)'.dependencies]
wgpu-core = { version = "=0.19.4", default-features = false, features = ["vulkan", "dx12"] }
wgpu-hal  = { version = "=0.19.5", default-features = false, features = ["vulkan", "dx12"] }

# Linux: Vulkan only
[target.'cfg(target_os = "linux")'.dependencies]
wgpu-core = { version = "=0.19.4", default-features = false, features = ["vulkan"] }
wgpu-hal  = { version = "=0.19.5", default-features = false, features = ["vulkan"] }

# macOS: Metal only
[target.'cfg(target_os = "macos")'.dependencies]
wgpu-core = { version = "=0.19.4", default-features = false, features = ["metal"] }
wgpu-hal  = { version = "=0.19.5", default-features = false, features = ["metal"] }